# cuboid

./: .gitignore  .gitmodules  CMakeLists.txt
libs/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
